# Alice

./: .gitignore  CLAUDE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE2_IMPLEMENTATION.md  PROPOSAL.cn.md  PROPOSAL.md  README.md  UI_SPEC.md  WINDOWS_COMPAT.md  demo.html  demo_v2.html  index.html  package-lock.json  package.json
docs/: cursor-antigravity-research.md  multi-provider-design.md  multi-provider-expansion-plan.md  multi-provider-implementation-complete.md  multi-provider-implementation-review.md  multi-provider-support-design.md  onboarding-design.md  settings-redesign.md
scripts/: check-antigravity-data.sh  fix-tray-final.js  fix-tray-icon.js  generate-tray-from-main.js  invert-tray-icon.js  make-circular-tray.js  make-outline-tray.js  make-tray-stencil.js  optimize-icon.js  optimize-tray-v2.js  process-tray.js  refine-icons.js  remove-bg.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_action.rs  commands.rs  config.rs  database.rs  hook_processor.rs  http_server.rs  lib.rs  main.rs  notification.rs  platform.rs  queue.rs  report.rs  session.rs  tray.rs  usage.rs  watcher.rs
src-tauri/src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs
src/components/: BarChart.tsx  ImageGallery.tsx  OnboardingWizard.tsx  ProviderBadge.tsx  ProviderConfigCard.tsx  ProviderUsageCard.tsx  SearchOverlay.tsx  SessionCard.tsx  Toast.tsx  UsageMeter.tsx
src/contexts/: ThemeContext.tsx  ToastContext.tsx
src/lib/: platform.ts  provider-colors.ts  (+3 more)
(+10 files in other folders)
